--- a/front/src/app/components/user-list/user-list.component.html
+++ b/front/src/app/components/user-list/user-list.component.html
@@ -22,7 +22,7 @@
                         <td>{{ user.surname }}</td>
                         <td *ngIf="can_update" (click)="editUser(user.id)" class="clickable">{{ user.email }}</td>
                         <td *ngIf="!can_update">{{ user.email }}</td>
-                        <td>{{ JSON.stringify(user.permission) }}</td>
+                        <td> {{formatPermissions(user)}} </td>
                         <td>
                             <button class="btn btn-danger btn-sm" [disabled]="!can_delete"(click)="deleteUser(user.email)"> Delete </button>
                         </td>
