add error history

--- a/front/src/app/components/app/app.component.html
+++ b/front/src/app/components/app/app.component.html
@@ -4,6 +4,7 @@
       <a [routerLink]="'/user-list'" class="btn btn-outline-secondary navbar-brand" aria-current="page">Home</a>
       <a [routerLink]="'/order-list'" class="btn btn-outline-secondary navbar-brand" aria-current="page">Orders</a>
       <a [routerLink]="'/create-order'" class="btn btn-outline-secondary navbar-brand" aria-current="page">New Order</a>
+      <a [routerLink]="'/error-message'" class="btn btn-outline-secondary navbar-brand" aria-current="page">Error Mess</a>
       <a [routerLink]="'/'" class="btn btn-outline-secondary navbar-brand" aria-current="page" (click)='logout()'>LogOut</a>
       <div class="collapse navbar-collapse justify-content-between" id="navbarNavAltMarkup">
         <div class="navbar-nav">
