--- a/front/src/app/components/order-list/order-list.component.html
+++ b/front/src/app/components/order-list/order-list.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-5">
     <h2 class="mb-4">Porudžbine</h2>
 
-    <form [formGroup]="searchForm" (ngSubmit)="onSearch()" class="row g-3">
+    <form *ngIf="can_search" [formGroup]="searchForm" (ngSubmit)="onSearch()" class="row g-3">
         <div class="col-md-3">
             <label for="status" class="form-label">Status:</label>
             <select formControlName="status" id="status" class="form-select">
@@ -35,13 +35,16 @@
                     <th scope="col">Created by</th>
                     <th scope="col">Updated at</th>
                     <th scope="col">Items</th>
-                    <th scope="col">Actions</th> 
+                    <th scope="col">Actions</th>
                 </tr>
             </thead>
             <tbody>
                 <tr *ngFor="let order of orders">
                     <td>{{ order.id }}</td>
-                    <td>{{ order.status }}</td>
+
+                    <td *ngIf="can_track">{{ order.status }}</td>
+                    <td *ngIf="!can_track">-</td>
+
                     <td>{{ order.createdBy }}</td>
                     <td>{{ order.createdAt | date:'short' }}</td>
                     <td>
@@ -49,9 +52,9 @@
                             <li *ngFor="let dish of order.dishes">{{ dish.name }} ({{ dish.quantity }})</li>
                         </ul>
                     </td>
-                    <td>
-                        <button *ngIf="order.status !== 'CANCELED'" (click)="cancelOrder(order.id)"
-                            class="btn btn-danger btn-sm">
+                    <td *ngIf="can_cancel">
+                        <button *ngIf="order.status !== 'CANCELED' && order.status !== 'DELIVERED'"
+                            (click)="cancelOrder(order.id)" class="btn btn-danger btn-sm">
                             Cancel
                         </button>
                     </td>
@@ -59,3 +62,4 @@
             </tbody>
         </table>
     </div>
+</div>
