--- a/front/src/app/components/update-user/update-user.component.html
+++ b/front/src/app/components/update-user/update-user.component.html
@@ -69,7 +69,7 @@
                         <label for="track" class="form-check-label">Can Track</label>
                     </div>
                 </div>
-                <button type="submit" class="btn btn-success">Add User</button>
+                <button type="submit" class="btn btn-success">Update User</button>
             </form>
         </div>
     </div>
